fixed z-index bug, fixed modal onClick issue

--- a/src/features/hero/Hero.module.css
+++ b/src/features/hero/Hero.module.css
@@ -3,6 +3,7 @@
   width: 100%;
   min-height: 60vh;
   border-radius: 1rem;
+  z-index: auto;
 }
 
 .image {
@@ -29,7 +30,7 @@
 
 .header_container {
   position: absolute;
-  z-index: 10;
+  /* z-index: 5; */
   width: 100%;
   text-align: center;
   top: 30%;
@@ -54,7 +55,7 @@
 
 .lower {
   position: absolute;
-  z-index: 10;
+  /* z-index: 5; */
   width: 100%;
   text-align: center;
   bottom: 5%;
